--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -207,7 +207,7 @@
   <string name="listening">Listening …</string>
   <string name="login_with_amazon_warn">You need to login to Amazon to enable speech commands</string>
   <string name="riva_tutorial_url">https://rivaaudio.com/alexa-tutorial/en/index.html</string>
-  <string name="version_only">Version</string>
+  <string name="version_only">SDK Version</string>
   <string name="language">Language</string>
   <string name="english">English</string>
   <string name="bass">Bass</string>
