--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -452,6 +452,8 @@ By clicking Confirm, Device will be removed and you will be redirected to Home. 
   <string name="continue_txt">Continue</string>
   <string name="go_to_home">Go to Home</string>
   <string name="has_been_successfully_setup">has been successfully setup.</string>
+  <string name="do_you_want_to_cancel_the_setup">Do you want to cancel the setup?</string>
+  <string name="no">No</string>
   <string-array name="audio_output_array">
     <item>Stereo (S)</item>
     <item>Left Speaker (L)</item>
