--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -219,7 +219,7 @@
   <string name="login_with_amazon_warn">You need to login to Amazon to enable speech commands</string>
   <string name="riva_tutorial_url">https://rivaaudio.com/alexa-tutorial/en/index.html</string>
   <string name="version_only">SDK Version</string>
-  <string name="sdk_version_number">1.0(1.3)</string>
+  <string name="sdk_version_number">1.0(1.4)</string>
 
   <string name="language">Language</string>
   <string name="english">English</string>
@@ -481,6 +481,16 @@ By clicking Confirm, Device will be removed and you will be redirected to Home. 
   <string name="please_grant_the_required_location_permissions">Please grant the required location permissions.</string>
   <string name="bluetooth_is_already_turned_on">Bluetooth is already turned on.</string>
   <string name="app_version">App Version</string>
+  <string name="please_connect_to_a_wi_fi_network">Please connect to a Wi-Fi network</string>
+
+  <!--RivaVoice-->
+  <string name="riva_devices_waiting">"&#x20;"devices waiting for setup</string>
+  <string name="riva_device_waiting">"&#x20;"device waiting for setup</string>
+  <string name="we_have_found">We have found"&#x20;"</string>
+  <string name="device_serial_number">Device Serial Number</string>
+  <string name="device_serial_number_available">Device serial number available</string>
+  <string name="time_zone_not_available">Time Zone Not Available</string>
+
   <string-array name="audio_output_array">
     <item>Stereo (S)</item>
     <item>Left Speaker (L)</item>
